--- a/charts/helm-example/values.yaml
+++ b/charts/helm-example/values.yaml
@@ -36,7 +36,7 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
