--- a/charts/helm-k8s/templates/serviceaccount.yaml
+++ b/charts/helm-k8s/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "helm-example.serviceAccountName" . }}
+  name: {{ include "helm-k8s.serviceAccountName" . }}
   labels:
-{{ include "helm-example.labels" . | nindent 4 }}
+{{ include "helm-k8s.labels" . | nindent 4 }}
 {{- end -}}
