--- a/charts/helm-k8s/templates/service.yaml
+++ b/charts/helm-k8s/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helm-example.fullname" . }}
+  name: {{ include "helm-k8s.fullname" . }}
   labels:
-    {{- include "helm-example.labels" . | nindent 4 }}
+    {{- include "helm-k8s.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "helm-example.selectorLabels" . | nindent 4 }}
+    {{- include "helm-k8s.selectorLabels" . | nindent 4 }}
