--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -1,4 +1,4 @@
-# Default values for helm-example.
+# Default values for helm-k8s.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 197915863913.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd
+  repository: 861972665963.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd
   version: main-8471792
 
 imagePullSecrets: []
