--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '117582662550.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd/main-$GITHUB_SHA'
+        image-ref: '117582662550.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd/main-git_hash=$(git rev-parse --short "$GITHUB_SHA")'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
