--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,18 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '${{ steps.login-ecr.outputs.registry}}/${{ steps.image-info.outputs.ecr_repository }}:${GITHUB_REF##*/}-$git_hash'
-        #117582662550.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd:main-d6cfed1
-        format: 'table'
-        exit-code: '0'
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        severity: 'CRITICAL,HIGH'
+        image-ref: '117582662550.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd:${{ github.sha }}'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+      env:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: 'trivy-results.sarif'
 
 # This is a basic workflow to help you get started with Actions - END
 
