--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '117582662550.dkr.ecr.us-east-1.amazonaws.com/${GITHUB_REF##*/}-$git_hash'
+        image-ref: 'image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash'
         format: 'sarif'
         output: 'trivy-results.sarif'
       env:
