--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '117582662550.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd:main-861c147'
+        image-ref: '${{ steps.login-ecr.outputs.registry}}/${{ steps.image-info.outputs.ecr_repository }}:${{ steps.image-info.outputs.git_hash }}'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
