--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '${{ ECR_REGISTRY }}/${{ ECR_REPOSITORY }}:${{ steps.image-info.outputs.git_hash }}'
+        image-ref: '${{ steps.login-ecr.outputs.ECR_REGISTRY}}/${{ steps.image-info.outputs.ECR_REPOSITORY }}:${{ steps.image-info.outputs.git_hash }}'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
