--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: gitops-argocd
+        IMAGE_TAG: ${{ steps.image.outputs.version }}
 
       run: |
         # Build a docker container and push it to ECR
@@ -44,7 +45,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '${{ steps.login-ecr.outputs.ECR_REGISTRY}}/${{ steps.image-info.outputs.ECR_REPOSITORY }}:${{ steps.image-info.outputs.git_hash }}'
+        image-ref: '${{ steps.login-ecr.outputs.registry}}/${{ steps.image-info.outputs.ecr_repository }}:${{ steps.image-info.outputs.image_tag }}'
         format: 'table'
         exit-code: '0'
         ignore-unfixed: true
