--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: gitops-argocd
-        IMAGE_TAG: ${{ steps.image.outputs.version }}
+        IMAGE_TAG: ${GITHUB_REF##*/}-$git_hash
 
       run: |
         # Build a docker container and push it to ECR
