--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: gitops-argocd
-        IMAGE_TAG: main-$git_hash
+        IMAGE_TAG: $GITHUB_SHA
 
       run: |
         # Build a docker container and push it to ECR
