--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: gitops-argocd
+        GIT_HASH: $(git rev-parse --short "$GITHUB_SHA")
 
       run: |
         # Build a docker container and push it to ECR
@@ -44,13 +45,9 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '117582662550.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd:${{ github.sha }}'
+        image-ref: '$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash'
         format: 'sarif'
         output: 'trivy-results.sarif'
-      env:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v2
