--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash'
+        image-ref: '${{ steps.login-ecr.outputs.registry}}/${{ steps.image-info.outputs.ecr_repository }}:${{ steps.image-info.outputs.git_hash }}'
         format: 'sarif'
         output: 'trivy-results.sarif'
 
