--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: gitops-argocd
-        GIT_HASH: $(git rev-parse --short "$GITHUB_SHA")
+        IMAGE_TAG: ${GITHUB_REF##*/}-$git_hash
 
       run: |
         # Build a docker container and push it to ECR
@@ -45,7 +45,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '${{ steps.login-ecr.outputs.registry}}/${{ steps.image-info.outputs.ecr_repository }}:${{ steps.image-info.outputs.git_hash }}'
+        image-ref: '${{ steps.login-ecr.outputs.registry}}/${{ steps.image-info.outputs.ecr_repository }}:${{ steps.image-info.outputs.image_tag }}'
         format: 'sarif'
         output: 'trivy-results.sarif'
 
