--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,17 +45,12 @@ jobs:
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: '${{ steps.build-image.outputs.image }}'
-        format: 'sarif'
+        format: 'table'
         exit-code: '0'
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
-
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: 'trivy-results.sarif'
-
+        
 # This is a basic workflow to help you get started with Actions - END
 
     - name: Update Version
