--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -41,8 +41,8 @@ ingress:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: cmcloudlab760.info
+      paths: */
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
