--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -38,8 +38,7 @@ service:
 ingress:
   enabled: true
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internal
+    kubernetes.io/ingress.class: nginx
   hosts:
    - host: cmcloudlab760.info
      paths:
