--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -39,13 +39,14 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-  hosts:
-   - host: cmcloudlab760.info
-     paths:
-       - path: /*
-         backend:
-           serviceName: app-demo
-           servicePort: 80
+  path: /*
+  # hosts:
+  #  - host: cmcloudlab760.info
+  #    paths:
+  #      - path: /*
+  #        backend:
+  #          serviceName: app-demo
+  #          servicePort: 80
   # tls: []
   # #  - secretName: chart-example-tls
   # #    hosts:
