--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -39,18 +39,14 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-  path: /*
-  # hosts:
-  #  - host: cmcloudlab760.info
-  #    paths:
-  #      - path: /*
-  #        backend:
-  #          serviceName: app-demo
-  #          servicePort: 80
-  # tls: []
-  # #  - secretName: chart-example-tls
-  # #    hosts:
-  # #      - chart-example.local
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: cmcloudlab760.info
+      paths: []
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
