--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -44,6 +44,12 @@ ingress:
     - host: cmcloudlab760.info
       paths:
         - path: /*
+          pathType: Prefix
+          backend:
+            service:
+              name: app-demo
+              port:
+                number: 80
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
