--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF##*/}-$git_hash"
 
-# This is a basic workflow to help you get started with Actions - START
+# This is a basic workflow to help you get started with Actions
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
@@ -51,7 +51,7 @@ jobs:
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
         
-# This is a basic workflow to help you get started with Actions - END
+# This is a basic workflow to help you get started with Actions
 
     - name: Update Version
       run: |
