--- a/charts/helm-k8s/templates/ingress.yaml
+++ b/charts/helm-k8s/templates/ingress.yaml
@@ -2,9 +2,9 @@
 {{- $fullName := include "helm-k8s.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 {{- else -}}
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1
 {{- end }}
 kind: Ingress
 metadata:
@@ -32,10 +32,13 @@ spec:
       http:
         paths:
         {{- range .paths }}
-          - path: {{ . }}
+          - pathType: Prefix
+            path: /
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              service:
+                name: app-demo
+                port:
+                  number: 80
         {{- end }}
   {{- end }}
 {{- end }}
