nodeport support added

--- a/charts/helm-k8s/templates/ingress.yaml
+++ b/charts/helm-k8s/templates/ingress.yaml
@@ -36,9 +36,9 @@ spec:
             path: /
             backend:
               service:
-                name: app-demo
+                name: {{ $fullName }}
                 port:
-                  number: 80
+                  number: {{ $svcPort }}
         {{- end }}
   {{- end }}
 {{- end }}
