--- a/charts/helm-k8s/templates/ingress.yaml
+++ b/charts/helm-k8s/templates/ingress.yaml
@@ -33,7 +33,7 @@ spec:
         paths:
         {{- range .paths }}
           - pathType: Prefix
-            path: /
+            path: /*
             backend:
               service:
                 name: {{ $fullName }}
