--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -43,7 +43,7 @@ ingress:
   hosts:
     - host: cmcloudlab1775.info
       paths:
-        - path: /
+        - path: /*
           pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
