--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -40,11 +40,11 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: cmcloudlab1775.info
-      paths:
-        - path: /*
-          pathType: Prefix
+  hosts: []
+    # - host: cmcloudlab1775.info
+  paths:
+    - path: /*
+      pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
