--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -39,16 +39,16 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts: []
-    # - host: cmcloudlab1775.info
-  paths:
-    - path: /*
-      pathType: Prefix
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    kubernetes.io/tls-acme: "true"
+  hosts: 
+    - host: cmcloudlab1775.info
+      paths:
+        - path: /*
+          pathType: Prefix
+  tls:
+    - secretName: cmcloudlab1775.info
+      hosts:
+        - cmcloudlab1775.info
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
