nodeport support added

--- a/charts/helm-k8s/templates/ingress.yaml
+++ b/charts/helm-k8s/templates/ingress.yaml
@@ -32,7 +32,7 @@ spec:
       http:
         paths:
         {{- range .paths }}
-          - pathType: Prefix
+          - pathType: ImplementationSpecific
             path: /*
             backend:
               service:
