nodeport support added

--- a/charts/helm-k8s/templates/ingress.yaml
+++ b/charts/helm-k8s/templates/ingress.yaml
@@ -32,8 +32,8 @@ spec:
       http:
         paths:
         {{- range .paths }}
-          - pathType: ImplementationSpecific
-            path: /*
+          - pathType: Prefix
+            path: /
             backend:
               service:
                 name: {{ $fullName }}
