--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 454728591671.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd
+  repository: 105360013410.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd
   version: main-a580e0e
 
 imagePullSecrets: []
@@ -32,29 +32,24 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: NodePort #try with 'LoadBalancer'
   port: 80
 
 ingress:
-  enabled: true
+  enabled: true 
+  className: nginx #probbaly should be left empty aka "".
   annotations:
-    kubernetes.io/ingress.class: nginx
-#    kubernetes.io/tls-acme: "true"
-  hosts: 
-  http:
-    - host: cmcloudlab1775.info
+     kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
       paths:
         - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: app-demo
-              port:
-                number: 80
+          pathType: ImplementationSpecific
   tls: []
-#    - secretName: cmcloudlab1775.info
-#      hosts:
-#        - cmcloudlab1775.info
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -67,6 +62,13 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
