--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -37,7 +37,7 @@ service:
 
 ingress:
   enabled: true 
-  className: nginx #probbaly should be left empty aka "".
+  className: "" 
   annotations:
      kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
