--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -37,9 +37,9 @@ service:
 
 ingress:
   enabled: true 
-  className: "" 
+  className: nginx
   annotations:
-     kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
