--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -40,16 +40,16 @@ ingress:
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  # hosts:
-  #   - host: chart-example.local
-  paths:
-    - path: /
-      pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: cmcloudlab644.info
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls:
+    - secretName: cmcloudlab644.info
+      hosts:
+        - cmcloudlab644.info
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
