--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -32,24 +32,24 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer #try with 'LoadBalancer'
+  type: LoadBalancer
   port: 80
 
 ingress:
   enabled: false 
   className: ""
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: cmcloudlab644.info
       paths:
         - path: /*
           pathType: ImplementationSpecific
-  tls:
-    - secretName: cmcloudlab644.info
-      hosts:
-        - cmcloudlab644.info
+  tls: []
+    # - secretName: cmcloudlab644.info
+    #   hosts:
+    #     - cmcloudlab644.info
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
