--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -40,12 +40,13 @@ ingress:
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/default-backend: app-demo-helm-k8s
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: cmcloudlab644.info
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+  # hosts:
+  #   - host: cmcloudlab644.info
+    paths:
+      - path: /
+        pathType: ImplementationSpecific
           
   tls: []
     # - secretName: cmcloudlab644.info
