--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -42,9 +42,9 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: cmcloudlab644.info
+    - host: cmcloudlab615.info
       paths:
-        - path: /
+        - path: /*
           pathType: Prefix
           
   tls: []
