--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -41,11 +41,11 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts: []
-    # - host: cmcloudlab615.info
-  paths:
-    - path: /nginx
-      pathType: ImplementationSpecific
+  hosts:
+    - host: ""
+      paths:
+        - path: /nginx
+          pathType: Prefix
           
   tls: []
     # - secretName: cmcloudlab644.info
