--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -44,7 +44,7 @@ ingress:
   hosts:
     - host: ""
       paths:
-        - path: /nginx
+        - path: /
           pathType: Prefix
           
   tls: []
