--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -32,11 +32,13 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
+  type: NodePort 
+  # The other accepted value is 'LoadBalancer'
   port: 80
 
 ingress:
-  enabled: false 
+  enabled: true 
+  # If service type is 'LoadBalancer', the ingress should be disabled aka 'false'
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
