--- a/charts/helm-k8s/templates/hpa.yaml
+++ b/charts/helm-k8s/templates/hpa.yaml
@@ -17,7 +17,7 @@ spec:
     - type: Resource
       resource:
         name: memory
-        {{- if eq (include "helm-k8s.autoscaling.apiVersion" $) "autoscaling/v2beta1" }}
+        {{- if eq (include "helm-k8s.autoscaling.apiVersion" $) "autoscaling/v2" }}
         targetAverageUtilization: {{ . }}
         {{- else }}
         target:
@@ -29,7 +29,7 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        {{- if eq (include "helm-k8s.autoscaling.apiVersion" $) "autoscaling/v2beta1" }}
+        {{- if eq (include "helm-k8s.autoscaling.apiVersion" $) "autoscaling/v2" }}
         targetAverageUtilization: {{ . }}
         {{- else }}
         target:
