--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -32,13 +32,16 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer 
-  internal:
-    enabled: true
-    annotations:
-      service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a9d7e30f0252296a, subnet-0caa6a5a9945dcbb4"
-  # The other accepted value is 'LoadBalancer'
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a9d7e30f0252296a, subnet-0caa6a5a9945dcbb4"
   port: 80
+  type: LoadBalancer
+
+
+# service:
+#   type: LoadBalancer 
+#   # The other accepted value is 'LoadBalancer'
+#   port: 80
 
 ingress:
   enabled: false 
